hopefully a alignment fix

--- a/Contact.css
+++ b/Contact.css
@@ -5,7 +5,8 @@
     text-align: center;
     border-radius: 8px;
     width: 120px;
-    height: 40px;
+    /* height: 40px; */
+    line-height:40px;
     font-size: 30px;
     color: #FFF;
     font-family: 'Heebo', sans-serif;
